add the swgagger in responsecontroller
